[gd_scene load_steps=7 format=2]

[ext_resource path="res://tiles/background.png" type="Texture" id=1]
[ext_resource path="res://End/ControlEnd.gd" type="Script" id=2]
[ext_resource path="res://End/EndButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://tiles/End/mort_bkgd.png" type="Texture" id=4]
[ext_resource path="res://font/deathblood_72.tres" type="DynamicFont" id=5]
[ext_resource path="res://FadeIn.tscn" type="PackedScene" id=6]

[node name="ControlEnd" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -736.223, -103.711 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_top = 178.0
margin_right = 1024.0
margin_bottom = 422.0

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 200.0
texture = ExtResource( 4 )

[node name="EndButton" parent="CenterContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 332.0
margin_top = 204.0
margin_right = 692.0
margin_bottom = 244.0
size_flags_horizontal = 4

[node name="Message" type="Label" parent="CenterContainer"]
margin_left = 317.0
margin_top = 258.0
margin_right = 707.0
margin_bottom = 341.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.741176, 0, 0, 1 )
text = "Message"

[node name="FadeIn" parent="." instance=ExtResource( 6 )]
visible = false
[connection signal="pressed" from="CenterContainer/VBoxContainer/EndButton" to="." method="_on_EndButton_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
[connection signal="fade_out_finished" from="FadeIn" to="." method="_on_FadeIn_fade_out_finished"]
